gearset/main/default/objects/SomeObject__c/SomeObject__c.object-meta.xml
<CustomObject>
    <label>SomeObject</label>
    <nameField>
        <label>SomeObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SomeObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>