gearset/main/default/objects/SomeObject__c/fields/CreateableNotUpdateable__c.field-meta.xml
<CustomField>
    <fullName>CreateableNotUpdateable__c</fullName>
    <label>CreateableNotUpdateable</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>