gearset/main/default/objects/SomeObject__c/fields/MasterDetailToAccount__c.field-meta.xml
<CustomField>
    <fullName>MasterDetailToAccount__c</fullName>
    <label>MasterDetailToAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SomeObjects</relationshipLabel>
    <relationshipName>SomeObjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>