gearset/main/default/objects/SomeObject__c/fields/MasterDetailToContactCanReparent__c.field-meta.xml
<CustomField>
    <fullName>MasterDetailToContactCanReparent__c</fullName>
    <label>MasterDetailToContactCanReparent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SomeObjects</relationshipLabel>
    <relationshipName>SomeObjects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>