gearset/main/default/objects/SomeObject__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <label>Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>